testsuite/tests/simplCore/should_run/T10830.hs
import Data.List
main :: IO ()
main = maximumBy compare [1..10000] `seq` return ()
